@@ -162,7 +162,8 @@ def topological_sort(graph):
     return sorted
 
 
-def cmd(cmd, silent=False, ignore_returncode=False, communicate=True):
+def cmd(cmd, silent=False, ignore_returncode=False, communicate=True,
+        env=None):
     if not isinstance(cmd, basestring):
         # We use `shell=True`, so the command needs to be a single string and
         # we need to pay attention to shell quoting.
@@ -173,12 +174,17 @@ def cmd(cmd, silent=False, ignore_returncode=False, communicate=True):
                 arg = "'{}'".format(arg)
             quoted_args.append(arg)
         cmd = ' '.join(quoted_args)
+    if env is not None:
+        add_to_env = env
+        env = os.environ.copy()
+        env.update(add_to_env)
     process = subprocess.Popen(
         cmd,
         stdout=subprocess.PIPE,
         stderr=subprocess.PIPE,
         stdin=subprocess.PIPE,
-        shell=True)
+        shell=True,
+        env=env)
     if not communicate:
         # XXX See #12550
         return process
